--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "nativescript-contacts": "^1.5.3",
     "nativescript-phone": "^1.3.0",
+    "nativescript-telerik-ui": "^2.0.1",
     "nativescript-texttospeech": "^1.3.2",
     "nativescript-theme-core": "~1.0.2",
     "tns-core-modules": "3.0.1"
