--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "nativescript-contacts": "^1.5.3",
+    "nativescript-geolocation": "^3.0.0",
+    "nativescript-google-maps-sdk": "^2.1.3",
     "nativescript-phone": "^1.3.0",
     "nativescript-texttospeech": "^1.3.2",
     "nativescript-theme-core": "~1.0.2",
